<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <HorizontalScrollView
            android:id="@+id/paint_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/paint_scrollview_horizontal_padding"
                android:paddingRight="@dimen/paint_scrollview_horizontal_padding"
                android:paddingTop="@dimen/paint_scrollview_vertical_padding"
                android:paddingBottom="@dimen/paint_scrollview_vertical_padding">

            <!-- clear -->
            <ImageView
                    android:id="@+id/clear_button"
                    android:layout_width="@dimen/paint_scrollview_image_size"
                    android:layout_height="@dimen/paint_scrollview_image_size"
                    android:src="@mipmap/baseline_clear_black_48"
                    android:contentDescription="@string/clear_all"/>

            <!-- brash -->
            <ImageView
                    android:id="@+id/increase_thickness_button"
                    android:layout_width="@dimen/paint_scrollview_image_size"
                    android:layout_height="@dimen/paint_scrollview_image_size"
                    android:src="@mipmap/baseline_brush_black_48"
                    android:contentDescription="@string/increase_thickness"/>

            <!-- thick -->
            <ImageView
                    android:id="@+id/reduce_thickness_button"
                    android:layout_width="@dimen/paint_scrollview_image_size"
                    android:layout_height="@dimen/paint_scrollview_image_size"
                    android:src="@mipmap/baseline_brush_black_thin_48"
                    android:contentDescription="@string/reduce_thickness"/>

            <!-- square -->
            <ImageView
                    android:id="@+id/square_button"
                    android:layout_width="@dimen/paint_scrollview_image_size"
                    android:layout_height="@dimen/paint_scrollview_image_size"
                    android:src="@mipmap/baseline_crop_din_black_48"
                    android:layout_marginStart="@dimen/paint_scrollview_item_margin"
                    android:contentDescription="@string/square"/>

            <!-- rectangle -->
            <ImageView
                    android:id="@+id/rectangle_button"
                    android:layout_width="@dimen/paint_scrollview_image_size"
                    android:layout_height="@dimen/paint_scrollview_image_size"
                    android:src="@mipmap/baseline_crop_portrait_black_48"
                    android:layout_marginStart="@dimen/paint_scrollview_item_margin"
                    android:contentDescription="@string/rectangle"/>

            <!-- eraser -->
            <ImageView
                    android:id="@+id/eraser_button"
                    android:layout_width="@dimen/paint_scrollview_image_size"
                    android:layout_height="@dimen/paint_scrollview_image_size"
                    android:src="@mipmap/eraser_black_48"
                    android:layout_marginStart="@dimen/paint_scrollview_item_margin"
                    android:contentDescription="@string/eraser"/>

            <!-- save -->
            <ImageView
                    android:id="@+id/save_button"
                    android:layout_width="@dimen/paint_scrollview_image_size"
                    android:layout_height="@dimen/paint_scrollview_image_size"
                    android:src="@mipmap/baseline_save_black_48"
                    android:layout_marginStart="@dimen/paint_scrollview_item_margin"
                    android:contentDescription="@string/save"/>

        </LinearLayout>

    </HorizontalScrollView>

    <com.ys.nearbypaint.presentation.view.view.PaintView
            android:id="@+id/paint_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/paint_scrollview"/>

    <com.ys.nearbypaint.presentation.view.view.DisappearTextView
            android:id="@+id/thickness_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="12dp"
            android:gravity="center"
            android:background="@drawable/round_shape"
            tools:text="10"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

</RelativeLayout>